[gd_scene load_steps=10 format=3 uid="uid://da2tce85hxypb"]

[ext_resource type="Script" path="res://Scenes/end.gd" id="1_y82v5"]
[ext_resource type="Texture2D" uid="uid://deg4aw3uwls3c" path="res://images/Annotation 2024-06-16 212641.png" id="2_s767l"]
[ext_resource type="PackedScene" uid="uid://gokqof834in7" path="res://Scenes/hover_handler.tscn" id="3_5a73k"]
[ext_resource type="Texture2D" uid="uid://clwd5dv71vrn3" path="res://images/vote_icon_filled.png" id="3_k2uc1"]
[ext_resource type="Texture2D" uid="uid://b2sqeorfreic3" path="res://images/Bandeau_Front_Pop.png" id="5_tpmc4"]
[ext_resource type="Shader" path="res://Shaders/Banderol.shader.gdshader" id="6_7aa88"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mxe1p"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b43sx"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 16
border_width_top = 16
border_width_right = 16
border_width_bottom = 16
border_color = Color(0.796875, 0.796875, 0.796875, 1)
border_blend = true
corner_radius_top_left = 24
corner_radius_top_right = 24
corner_radius_bottom_right = 24
corner_radius_bottom_left = 24
expand_margin_left = 8.0
expand_margin_top = 10.0
expand_margin_right = 8.0
shadow_size = 8

[sub_resource type="ShaderMaterial" id="ShaderMaterial_48qxj"]
shader = ExtResource("6_7aa88")
shader_parameter/speed = 0.015
shader_parameter/color = Color(1, 1, 1, 1)

[node name="End" type="Control"]
custom_minimum_size = Vector2(1152, 648)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_y82v5")

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color(0.980392, 0.933333, 0.807843, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="NewRun" type="Button" parent="."]
modulate = Color(1, 0.386719, 0.447141, 1)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -299.0
offset_top = -321.0
offset_right = -35.0
offset_bottom = -57.0
grow_horizontal = 0
grow_vertical = 0
theme_override_styles/focus = SubResource("StyleBoxEmpty_mxe1p")
icon = ExtResource("3_k2uc1")
flat = true

[node name="HoverHandler" parent="NewRun" instance=ExtResource("3_5a73k")]
HOVER_OFFSET = Vector2(0, 0)

[node name="TextureRect" type="TextureRect" parent="NewRun"]
self_modulate = Color(0.0196078, 0.0313726, 0.207843, 0.156863)
show_behind_parent = true
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 266.0
offset_bottom = 266.0
texture = ExtResource("3_k2uc1")

[node name="FactEnd" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Image" type="TextureRect" parent="FactEnd"]
unique_name_in_owner = true
visible = false
modulate = Color(1, 0.386719, 0.447141, 1)
custom_minimum_size = Vector2(360, 360)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -386.0
offset_top = -386.0
grow_horizontal = 0
grow_vertical = 0
mouse_filter = 2
texture = ExtResource("2_s767l")
expand_mode = 1
stretch_mode = 5

[node name="CenterContainer" type="CenterContainer" parent="FactEnd"]
layout_mode = 0
offset_left = 41.0
offset_top = 25.0
offset_right = 1106.0
offset_bottom = 245.0
mouse_filter = 2

[node name="End_Sentence" type="RichTextLabel" parent="FactEnd/CenterContainer"]
unique_name_in_owner = true
modulate = Color(1, 0.386719, 0.447141, 1)
clip_contents = false
custom_minimum_size = Vector2(960, 0)
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.160784)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_constants/shadow_outline_size = 0
theme_override_constants/line_separation = 6
theme_override_font_sizes/normal_font_size = 30
theme_override_font_sizes/bold_font_size = 30
bbcode_enabled = true
text = "Le Front national est un parti fondé par "
fit_content = true
scroll_active = false
visible_characters = 0
visible_ratio = 0.0

[node name="PanelContainer" type="PanelContainer" parent="FactEnd"]
self_modulate = Color(0.721569, 0.619608, 0.47451, 1)
custom_minimum_size = Vector2(486, 352)
layout_mode = 0
offset_left = 91.0
offset_top = 258.0
offset_right = 841.0
offset_bottom = 610.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_b43sx")

[node name="ScrollContainer" type="ScrollContainer" parent="FactEnd/PanelContainer"]
layout_mode = 2

[node name="FactContainer" type="VBoxContainer" parent="FactEnd/PanelContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 16

[node name="CenterContainer" type="CenterContainer" parent="."]
custom_minimum_size = Vector2(876, 573)
layout_mode = 0
offset_left = 118.0
offset_top = -48.0
offset_right = 994.0
offset_bottom = 525.0
mouse_filter = 2

[node name="Center_Sentence" type="RichTextLabel" parent="CenterContainer"]
unique_name_in_owner = true
visible = false
modulate = Color(1, 0.386719, 0.447141, 1)
clip_contents = false
custom_minimum_size = Vector2(876, 0)
layout_mode = 2
theme_override_font_sizes/normal_font_size = 50
theme_override_font_sizes/bold_font_size = 42
bbcode_enabled = true
text = "Le Front national est un parti fondé par "
fit_content = true
scroll_active = false
visible_characters = 0
visible_ratio = 0.0

[node name="BandeauFrontPop" type="Sprite2D" parent="."]
visible = false
position = Vector2(20.5, 504)
texture = ExtResource("5_tpmc4")

[node name="BandeauFrontPop2" type="Sprite2D" parent="."]
visible = false
position = Vector2(1131.5, 504)
texture = ExtResource("5_tpmc4")

[node name="BandeauFP" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_48qxj")
layout_mode = 0
offset_left = -1.0
offset_top = 27.0
offset_right = 40.0
offset_bottom = 980.0
texture = ExtResource("5_tpmc4")
stretch_mode = 1

[node name="BandeauFP2" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_48qxj")
layout_mode = 0
offset_left = 1112.0
offset_top = 27.0
offset_right = 1153.0
offset_bottom = 980.0
texture = ExtResource("5_tpmc4")
stretch_mode = 1

[connection signal="button_up" from="NewRun" to="." method="_on_new_run_button_up"]
